# tap-aptem

./: README.md  meltano.yml  pyproject.toml
tap_aptem/: __init__.py  __main__.py  client.py  metadata.py  pagination.py  tap.py
tests/: __init__.py  test_core.py
